Added support to refresh token.

--- a/auth-server/src/main/resources/application.properties
+++ b/auth-server/src/main/resources/application.properties
@@ -11,3 +11,4 @@ security.jwt.key-store-password=changeme
 security.jwt.key-pair-password=changeme
 security.jwt.key-pair-alias=servercert
 
+server.port=8085
